[package]
name = "scheme-to-wasm"
version = "0.1.0"
authors = ["Chriscbr <crybicki98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexpr = "0.2.3"
im-rc = "13.0.0"
parity-wasm = "0.41"

[dev-dependencies]
serial_test = "0.2.0"
serial_test_derive = "0.2.0"
wasmer-runtime = "0.11.0"
